--- a/src/db/app.json
+++ b/src/db/app.json
@@ -254,6 +254,17 @@
         "starters": ["lemonWater"]
       }
     ],
-    "bookings": [],
+    "bookings": [
+       {
+         "id": 1,
+         "date": "2022-01-25",
+         "hour": "12:30",
+         "table": 1,
+         "repeat": false,
+         "duration": 4,
+         "ppl": 3,
+         "starters": []
+       }
+    ],
     "orders": []
  }
