--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "stylelint-scss": "^3.5.4"
     },
     "dependencies": {
+        "flickity": "^2.3.0",
         "json-server": "^0.17.0"
     }
 }
